fixed checkbox and mobile response alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ header nav {
 
 header nav ul {
     display: flex;
-    flex-wrap:-wrap;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     list-style: none;
